icon style in a selected table row

--- a/src/components/base/BaseButton.scss
+++ b/src/components/base/BaseButton.scss
@@ -198,3 +198,27 @@ a:not(.is-none) {
 		box-shadow: 0 0 0 3px inherit;
 	}
 }
+
+// handle style in a highlight table row
+tr.highlight {
+	/* stylelint-disable-next-line */
+	.is-text {
+		&:hover {
+			background-color: var(--color-white);
+			box-shadow: none;
+		}
+	}
+}
+
+// handle style in a selected table row
+tr.selected {
+	/* stylelint-disable-next-line */
+	.is-text {
+		color: var(--color-white);
+
+		&:hover {
+			background-color: var(--color-tertiary-dark);
+			box-shadow: none;
+		}
+	}
+}
