--- a/src/components/base/BaseButton.scss
+++ b/src/components/base/BaseButton.scss
@@ -35,21 +35,21 @@ a:not(.is-none) {
 		--button-background: var(--color-success);
 		--button-text-color: var(--color-white);
 		&:hover {
-			--button-background: var(--color-success--dark);
+			--button-background: var(--color-success-dark);
 		}
 	}
 	&.is-danger {
 		--button-background: var(--color-danger);
 		--button-text-color: var(--color-white);
 		&:hover {
-			--button-background: var(--color-danger--dark);
+			--button-background: var(--color-danger-dark);
 		}
 	}
 	&.is-info {
 		--button-background: var(--color-info);
 		--button-text-color: var(--color-white);
 		&:hover {
-			--button-background: var(--color-info--dark);
+			--button-background: var(--color-info-dark);
 		}
 	}
 	&.is-fancy {
