adding secondary dark as sidebar active item color

--- a/src/themes/int/styles/variables/_colors.scss
+++ b/src/themes/int/styles/variables/_colors.scss
@@ -10,4 +10,5 @@
 	--color-accent: #74c599;
 	--color-gray-dark: #17212a;
 	--color-gray-light: rgba(23, 33, 42, 0.1);
+	--color-sidebar-menu-item-active: var(--color-secondary-dark);
 }
