changed color gray light

--- a/src/themes/int/styles/variables/_colors.scss
+++ b/src/themes/int/styles/variables/_colors.scss
@@ -1,5 +1,7 @@
 // extends the default theme
 :root {
+	$brighten: 10%;
+	
 	/* main colors */
 	--color-primary: #064963;
 	--color-primary-light: #417491;
@@ -9,6 +11,6 @@
 	--color-secondary-dark: #a31139;
 	--color-accent: #74c599;
 	--color-gray-dark: #17212a;
-	--color-gray-light: rgba(23, 33, 42, 0.1);
+	--color-gray-light: color(var(--color-primary) tint(#{$brighten}));
 	--color-sidebar-menu-item-active: var(--color-secondary-dark);
 }
