--- a/src/themes/n21/styles/variables/_colors.scss
+++ b/src/themes/n21/styles/variables/_colors.scss
@@ -1,7 +1,12 @@
 // extends the default theme
+@import "@styles-default/variables.scss";
+
 :root {
 	/* main colors */
 	--color-primary: #b10438;
 	--color-secondary: #78aae5;
-	--color-secondary-dark: #4d8fdd;
+	--color-primary-light: color-mod(var(--color-primary) tint(#{$brighten}));
+	--color-primary-dark: color-mod(var(--color-primary) shade(#{$darken}));
+	--color-secondary-light: color-mod(var(--color-secondary) tint(#{$brighten}));
+	--color-secondary-dark: color-mod(var(--color-secondary) shade(#{$darken}));
 }
