fix scaling issue and color

--- a/src/themes/brb/styles/variables/_colors.scss
+++ b/src/themes/brb/styles/variables/_colors.scss
@@ -1,5 +1,5 @@
-// extends the default theme
-@import "@styles-default/variables.scss";
+$brighten: 15%;
+$darken: 25%;
 
 :root {
 	/* main colors */
